--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ padding: 50px;
+ padding-bottom: 500px;
+ background-color: rgb(16, 226, 103);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: rgb(0, 15, 15);
+}
+
+p {
+  background-color: rgb(217, 231, 11);
+  padding: 10px;
+  color: blue;
 }
